--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,20 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Magi</title>
+
+		<link rel="stylesheet" href="style.css" media="screen">
 	</head>
 	<body>
+		<div id="hud">
+			<div id="magi">
+				<label for="magi">MAGI</label>
+
+				<div class="unit">MELCHIOR</div>
+				<div class="unit">BALTHASAR</div>
+				<div class="unit">CASPER</div>
+			</div>
+		</div>
+
 		<script src="bundle.js"></script>
 	</body>
 </html>
