--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
 	</head>
 	<body>
 		<div id="hud">
+			<div id="status">Loading...</div>
+
 			<div id="magi">
 				<label for="magi">MAGI</label>
 
