Adds form to ask questions

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
 		<div id="hud">
 			<div id="status">Loading...</div>
 
+			<form id="ask">
+				<p>Ask if black text looks good with this color:</p>
+				<input type="color">
+			</form>
+
 			<div id="magi">
 				<label for="magi">MAGI</label>
 
